Remove commented code